fix scrollbar payroll table (#330)
* fix scrollbar payroll table

* edit width span table

--- a/app/assets/stylesheets/application_invoice.css.scss
+++ b/app/assets/stylesheets/application_invoice.css.scss
@@ -723,10 +723,6 @@ body.somsri-invoice >.container-fluid {
         font-family: 'Maitree', serif;
         font-size: 18px;
         font-weight: 500;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
         text-align: center;
         color: #5b5b5b;
         margin-top: 10px;
